// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth0-lock should show lock and handle successful authentication 1`] = `
Array [
  Object {
    "payload": Object {
      "idToken": "ok-token",
      "profile": Object {
        "profileData": "blah",
      },
    },
    "type": "set auth0 user",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`auth0-lock should show lock and handle unsuccessful authentication 1`] = `
Array [
  Object {
    "payload": null,
    "type": "set auth0 user",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/login",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;
